[package]
name = "hook"
version = "0.1.0"
authors = ["Alex M. M. <acdenissk69@gmail.com>"]
edition = "2024"
description = "Hook macro extracted from the `command_attr` crate"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "^1.0"
syn = { version = "^1.0", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "1.0"
